# haeo

./: .gitignore  configuration.yaml  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
custom_components/haeo/: __init__.py  config_flow.py  const.py  coordinator.py  data_loader.py  manifest.json  sensor.py
custom_components/haeo/flows/: __init__.py  battery.py  connection.py  generator.py  grid.py  hub.py  load.py  load_constant.py  load_forecast.py  net.py  options.py
custom_components/haeo/model/: __init__.py  battery.py  connection.py  constant_load.py  element.py  entity.py  forecast_load.py  generator.py  grid.py  load.py  load_constant.py  load_forecast.py  net.py  network.py
custom_components/haeo/translations/: en.json
custom_components/haeo/types/: __init__.py  battery.py  connection.py  constant_load.py  fields.py  forecast_load.py  generator.py  grid.py  load_constant.py  load_forecast.py  net.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_data_loader.py  test_init.py  test_model.py  test_sensor.py
tests/flows/: __init__.py  test_battery.py  test_common.py  test_connection.py  test_generator.py  test_grid.py  test_hub.py  test_load.py  test_load_constant.py  test_load_forecast.py  test_net.py  test_options.py  test_options_flow.py
tests/flows/test_data/: battery.py  connection.py  forecast_load.py  generator.py  grid.py  load_constant.py  load_forecast.py
