[project]
name = "haeo-modelling"
version = "0.1.0"
description = "Home Assistant Energy Network Optimizer"
readme = "README.md"
requires-python = ">=3.13.2"

dependencies = ["numpy>=2.2.2", "pulp[open-py]>=3.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<=8.4.1",
    "pytest-cov>=6.1.1,<=6.2.1",
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "homeassistant>=2025.4.4",
    "pytest-homeassistant-custom-component>=0.13.260,<=0.13.285",
]

[tool.ruff]
required-version = ">=0.13.0"
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "--disable-warnings"]
markers = [
    "asyncio: marks tests as requiring asyncio (deselect with '-m \"not asyncio\"')",
]
